Write test cases in canonical order (#24)
When executing scenarios in parallel test cases are written in an
arbitrary order. This makes manual inspection of the output harder than
it needs to be.